# soil-query

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  railway.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/soil-query/: Cargo.toml
crates/soil-query-api/: Cargo.toml  README.md
crates/soil-query-api/src/: db.rs  handlers.rs  main.rs  models.rs
crates/soil-query-cli/: Cargo.toml  README.md
crates/soil-query-cli/src/: main.rs
crates/soil-query-parser/: Cargo.toml  README.md
crates/soil-query-parser/examples/: inspect_files.rs  show_ids.rs
crates/soil-query-parser/src/: db.rs  main.rs  report.rs  validation.rs
crates/soil-query/examples/: parse_sol.rs
crates/soil-query/src/: definitions.rs  error.rs  lib.rs  parser.rs  types.rs
crates/soil-query/tests/: parser_tests.rs
crates/soil-query/tests/data/: BM.SOL  GI.SOL
output/: .gitignore  DATABASE_INFO.md  full_parse_report.json  parse_report.json
test_data/: GI.SOL
web/: README.md  index.html
web/css/: style.css
web/js/: api.js  app.js  geocoding.js  map.js
