[workspace]
members = [
    "crates/soil-query",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["JK <jk@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/eusojk/soil-query"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }