[workspace]
members = [
    "crates/soil-query", "crates/soil-query-parser",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["JK <jk@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/eusojk/soil-query"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
soil-query = { path = "crates/soil-query" }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
indicatif = "0.17"
serde_json = "1.0"
chrono = "0.4"
