[package]
name = "soil-query-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soil-query.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui.workspace = true
