[package]
name = "soil-query-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soil-query.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
clap.workspace = true
walkdir.workspace = true
indicatif.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true
